#######################################################################
#  TARDIS - Transformer And Rapid Dimensionless Instance Segmentation #
#                                                                     #
#  New York Structural Biology Center                                 #
#  Simons Machine Learning Center                                     #
#                                                                     #
#  Robert Kiewisz, Tristan Bepler                                     #
#  MIT License 2021 - 2025                                            #
#######################################################################

[metadata]
name = napari-tardis-em
version = attr: napari_tardis_em.__version__
description = Tomogram and micrograph segmentation with TARDIS-em
long_description = file: README.md
long_description_content_type = text/markdown

author = Robert Kiewisz
author_email = robert.kiewisz@gmail.com, rkiewisz@nysbc.org
license =  MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: napari
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing

[options]
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires = file:requirements.txt
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-tardis-em = napari_tardis_em:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml